--- a/css/login.css
+++ b/css/login.css
@@ -17,7 +17,7 @@ main {
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
-  background-image: linear-gradient(#1F2F98, #1CA7EC);
+  background-image: linear-gradient(#5064c7, #1CA7EC);
   padding: 2rem;
   display: flex;
   align-items: center;
@@ -260,7 +260,7 @@ main.sign-up-mode .carousel {
   width: 55%;
   left: 45%;
   top: 0;
-  background-image: linear-gradient(#1F2F98, #1CA7EC);
+  background-image: linear-gradient(#5064c7, #1CA7EC);
   border-radius: 2rem;
   display: grid;
   grid-template-rows: auto 1fr;
